# fzn2lp

./: Cargo.toml  README.md  format-proposal.md  test.fzn
.github/workflows/: minizinc-test.yml  release.yml
src/: lib.rs
