[package]
name = "fzn2lp"
version = "0.1.2"
publish = false
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A FlatZinc to AnsProlog converter"
readme = "README.md"
repository = "https://github.com/sthiele/fzn2lp"
license = "MIT"
edition = "2018"
exclude = ["/.github"]

[dependencies]
nom = "5.1"
flatzinc = "0.2"
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
stderrlog = "0.4"