[package]
name = "fzn2lp"
version = "0.1.3"
publish = false
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A FlatZinc to AnsProlog converter"
readme = "README.md"
repository = "https://github.com/potassco/fzn2lp"
license = "MIT"
edition = "2018"
exclude = ["/.github"]

[dependencies]
flatzinc = "0.3"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
stderrlog = "0.5"
