[package]
name = "fzn2lp"
version = "0.1.4-pre"
publish = false
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "A converter from FlatZinc into an ASP fact format "
readme = "README.md"
repository = "https://github.com/potassco/fzn2lp"
license = "MIT"
edition = "2021"
exclude = ["/.github"]

[dependencies]
flatzinc = "0.3"
clap = { version = "3.0.9", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
stderrlog = "0.5"
